# tshare

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
public/: connect.html  index.html
src/tshare/: Cargo.toml
src/tshare/public/: index.html
src/tshare/src/: lib.rs  main.rs
src/tshare/src/client/: mod.rs
src/tshare/src/tunnel/: mod.rs
src/tshare/src/web/: mod.rs
src/tunnel/: mod.rs
src/tunnel-server/: Cargo.toml
src/tunnel-server/src/: main.rs
src/web/: mod.rs
src/web-server/: Cargo.toml
src/web-server/src/: main.rs
