[package]
name = "tshare"
version = "1.0.5"
authors = ["RobbyV2 <robby@robby.blue"]
license = "MIT"
repository = "https://github.com/RobbyV2/tshare"
homepage = "https://github.com/RobbyV2/tshare"
description = "Share your terminal session with anyone through a simple web link"
keywords = ["terminal", "sharing", "collaboration", "tty", "websocket"]
categories = ["command-line-utilities", "web-programming::websocket"]
edition = "2024"

[[bin]]
name = "tshare"
path = "src/main.rs"

[lib]
name = "tshare"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
portable-pty = "0.9"
tokio-tungstenite = "0.27"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = { version = "0.29.0" }
ctrlc = { version = "3.4.7" }
axum = { version = "0.8", features = ["ws"] }
dashmap = "6.1"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4"] }
